minor changes in style

--- a/jsfiddleretriever.html
+++ b/jsfiddleretriever.html
@@ -40,10 +40,11 @@
 		}
 		h1 {
 			text-align: center;
+			margin-top: 10px;
 		}
 		#output {
 			overflow: auto;
-			height: 600px;
+			height: 450px;
 			margin-top: 5px;
 		}
 	</style>
