--- a/jsfiddleretriever.html
+++ b/jsfiddleretriever.html
@@ -51,7 +51,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Fiddle Retriever</h1>
+		<div class="page-header">
+			<h1>Fiddle Retriever</h1>
+		</div>
 		<div class="row">
 			<div class="span9">
 				<p>
