--- a/jsfiddleretriever.html
+++ b/jsfiddleretriever.html
@@ -4,7 +4,7 @@
 	<title>Fiddle Backup</title>
 	<meta charset="utf-8" />
 
-	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<style>
 		input {
 			border-width: 2px;
@@ -44,7 +44,7 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="https://rawgithub.com/padolsey/jQuery-Plugins/master/cross-domain-ajax/jquery.xdomainajax.js" ></script>
-	<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-buttons.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script src="jsfiddleutils.js"></script>
 	<script>
 		jQuery.fn.selectText = function() {
